--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
         "@popperjs/core": "^2.11.0",
         "@vue/server-renderer": "^3.2.27",
         "autoprefixer": "^10.4.0",
+        "bootstrap": "^5.2.2",
+        "bootstrap-vue": "^2.23.1",
         "eslint": "^8.4.1",
         "eslint-plugin-vue": "^8.2.0",
         "laravel-mix": "^6.0.41",
